delete @Transactional and return .toList()